# LearnOpenGL

./: .gitmodules  README.md
breakout/: .gitignore  CMakeLists.txt  README.md
breakout/engine/: CMakeLists.txt
breakout/engine/include/engine/: audio.hpp  debug.hpp  engine.hpp  game.hpp  game_level.hpp  game_object.hpp  particle.hpp  particle_generator.hpp  post_processing.hpp  resource.hpp  shader.hpp  sprite.hpp  text_renderer.hpp  texture.hpp
breakout/engine/include/glad/: glad.c
breakout/engine/include/stb_image/: stb_image.cpp
breakout/engine/shaders/: text.frag
breakout/engine/src/: audio.cpp  debug.cpp  engine.cpp  game.cpp  game_level.cpp  game_object.cpp  particle_generator.cpp  post_processing.cpp  resource.cpp  shader.cpp  sprite.cpp  text_renderer.cpp  texture.cpp
breakout/include/: ball_object.hpp  breakout.hpp  breakout_effects.hpp  embed.h  power_up.hpp  shaders.h
breakout/src/: Breakout.cpp  ball_object.cpp  breakout_effects.cpp  main.cpp  particle.frag  particle.vert  post_processing.frag  post_processing.vert  power_up.cpp  sprite.frag  sprite.vert
example/: .gitignore  CMakeLists.txt  Camera.cpp  Camera.hpp  Dockerfile  Makefile  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Shader.cpp  Shader.hpp  colours.fs  creating-window.cpp  point.hpp  skybox.vs
example/include/glad/: glad.h
